--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div id="MaskLay" style="display: none;">
         <div class="guide-container">
             <div class="guide-text">
-                <p>从主屏幕打开以获得更好的体验</p>
+                <p>从主屏幕打开以获得更好的体验(点击此处关闭提示)</p>
             </div>
             <div class="guide-animation">
                 <img src="img/dao.png">
